--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: UserPortfolio
-description: A very nice tagline about AI
+title: Project Portfolio
+description: Exploring data, finding insights and communicate ideas
 theme: jekyll-theme-cayman
