--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Project Portfolio
+title: Anton's Analytics - Project Portfolio
 description: Exploring data, finding insights and communicate ideas
 theme: jekyll-theme-cayman
