--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Anton's Analytics - Project Portfolio
-description: Exploring data, finding insights and communicate ideas
+description: Exploring data, finding insights and communicating ideas
 theme: jekyll-theme-cayman
