--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Anton's Analytics - Project Portfolio
+title: Anton's Analytics - \n 
+       Project Portfolio
 description: Exploring data, finding insights and communicating ideas
 theme: jekyll-theme-cayman
